JumpScript/tests/baselines/reference/contextualTypingOfAccessors.errors.txt
tests/cases/compiler/contextualTypingOfAccessors.jump(8,8): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/contextualTypingOfAccessors.jump(11,8): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.


==== tests/cases/compiler/contextualTypingOfAccessors.jump (2 errors) ====
    // not contextually typing accessors
    
    var x: {
       foo: (x: number) => number;
    }
     
    x = {
       get foo() {
           ~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
          return (n)=>n
       },
       set foo(x) {}
           ~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    }
    